Fixed extra margin on the language dropdown menu

--- a/public/sass/header/_switch-languages.scss
+++ b/public/sass/header/_switch-languages.scss
@@ -21,6 +21,7 @@
         z-index: 1;
         a {
             text-decoration: none;
+            display: block;
             padding-inline: .5rem;
             &[aria-current="true"] {
                 background: var(--secondary-colour);
